--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
     <div id="board"></div>
-    <div class="boardInfo"></div>
+    <div class="boardInfo">
+        <div>
+            Score: <div id="scoreBoard"></div>
+            <button id="start">Start</button>
+        </div>
+    </div>
+    <div id="gameOver">Game Over</div>
 </body>
 </html>
